--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="container">
+<h1> THE PRODUCT </h1>
   <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
     <p>
+      
       <label for="name">Product Name:</label>
       <input
         type="text"
